k8s/deployment/ingredient/ingredient-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingredient-svc
  namespace: demo
  labels:
    app: ingredient-svc
    version: v1
spec:
  selector:
    matchLabels:
      app: ingredient-svc
      version: v1
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ingredient-svc
        version: v1
    spec:
      containers:
        - env:
            - name: GRPC_HOST
              value: "0.0.0.0"
            - name: GRPC_PORT
              value: "50050"
            - name: INGREDIENT_SVC_PORT
              value: "3001"
          name: gateway-svc
          image: registry.gitlab.com/hoanganhnguyen1994/ui-management:ingredient-svc-v1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 150Mi
            limits:
              cpu: 100m
              memory: 300Mi
          ports:
            - name: grpc
              containerPort: 50051
              protocol: TCP
            - name: http
              containerPort: 3101
              protocol: TCP
