k8s/deployment/ingredient/ingredient-svc-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingredient-svc
  namespace: demo
  labels:
    app: ingredient-svc
spec:
  type: ClusterIP
  selector:
    app: ingredient-svc
  ports:
    - name: grpc
      port: 80
      targetPort: 50051
      protocol: TCP
    - name: http
      port: 3101
      targetPort: 3101
      protocol: TCP
