k8s/deployment/ingredient/ingredient-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingredient-svc
  labels:
    app: ingredient-svc
spec:
  type: ClusterIP
  selector:
    app: ingredient-svc
  ports:
    - name: grpc
      port: 80
      targetPort: 50051
      protocol: TCP
