k8s/deployment/ingredient/ingredient-svc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: ingredient-svc
  namespace: demo
spec:
  rules:
    - host: simple.ingredient
      http:
        paths:
#          - path: /api/client(/|$)(.*)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingredient-svc
                port:
                  number: 3101
